# MindQuest

./: .gitignore  LICENSE  README.md
backend/: app.py  celery_config.py  pyproject.toml  requirements.txt
backend/applications/: auth.py  celery_init.py  config.py  extensions.py  mail.py  models.py  resources.py  routes.py  tasks.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/assets/: main.css
frontend/src/components/: AdminDashboard.vue  AlertMessage.vue  ChartCard.vue  Sidebar.vue  TableCard.vue  Topbar.vue  UserDashboard.vue
frontend/src/router/: index.js
frontend/src/store/: index.js
frontend/src/utils/: api.js  avatargenerator.js  formatDateTime.js
frontend/src/views/: AdminStats.vue  AllAttempts.vue  AttemptQuiz.vue  CreateQuiz.vue  Dashboard.vue  EditQuiz.vue  Home.vue  Login.vue  Register.vue  SearchResults.vue  SubjectPage.vue  Subjects.vue  UserManagement.vue  UserProfile.vue  ViewQuiz.vue  ViewUserAnswers.vue
